<resources>
    <string name="app_name">Moodi</string>
    <string name="unen_maara">Unen määrä</string>
    <string name="paivan_pahin_masentuneisuus">Päivän pahin masentuneisuus</string>
    <string name="paivan_kiihtynein_olo">Päivän kiihtynein olo</string>
    <string name="paivan_arsyyntynein_olo">Päivän ärsyyntynein olo</string>
    <string name="paivan_ahditunein_olo">Päivän ahdistunein olo</string>
    <string name="otetut_laakkeet">Otetut lääkkeet</string>
    <string name="muistiinpanot">Muistiinpanot</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="zero_hours">0h</string>
    <string name="keskiverto_unen_maara">Keskiverto unen määrä</string>
    <string name="keskiverto_masentuneisuus">Keskiverto masentuneisuus</string>
    <string name="keskiverto_kiihtynein_olo">Keskiverto kiihtynein olo</string>
    <string name="keskiverto_arsyyntynein_olo">Keskiverto ärsyyntynein olo</string>
    <string name="keskiverto_ahdistunein_olo">Keskiverto ahdistunein olo</string>
    <string name="tiedot">Moodi mielialan seurannan mobiilisovellus on Metropolian opiskelijoijen kehittämä.</string>
    <string name="versio">Versio 0.1</string>
    <string name="vuosi">2020</string>
    <string name="sovelluksen_tiedot">Tietoa sovelluksesta</string>
    <string name="aika">20.4.2020</string>
    <string name="Nappi">OK</string>
    <string name="uni">Uni</string>
    <string name="masentuneisuus">Masentuneisuus</string>
    <string name="kiihtyvyys">Kiihtyvyys</string>
    <string name="arsytys">Ärsytys</string>
    <string name="ahdistus">Ahdistus</string>


</resources>
