<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B1F6FF"
    tools:context=".BarChartActivity">

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="365dp"
        android:layout_height="474dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBarChart"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/analytics_bars"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPieChart" />

    <Button
        android:id="@+id/btnPieChart"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/light_analytics_pie2"
        android:onClick="pieChart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnInfo" />

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/light_question_help_square"
        android:onClick="info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <Button
        android:id="@+id/btnAverageDay"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/mask_star"
        android:onClick="averageDay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnInfo" />

    <Button
        android:id="@+id/btnMain"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/light_house_chimney"
        android:onClick="mainActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBarChart" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/depisnappi"
        android:layout_width="57dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:text="@string/masentuneisuus"
        app:layout_constraintBaseline_toBaselineOf="@+id/sleepButton"
        app:layout_constraintEnd_toStartOf="@+id/sleepButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sleepButton"
        android:layout_width="57dp"
        android:layout_height="55dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="88dp"
        android:text="@string/uni"
        app:layout_constraintBaseline_toBaselineOf="@+id/irritationButton"
        app:layout_constraintBottom_toTopOf="@+id/btnBarChart"
        app:layout_constraintEnd_toStartOf="@+id/irritationButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/depisnappi"
        app:layout_constraintTop_toBottomOf="@+id/barChart"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/agitationButton"
        android:layout_width="57dp"
        android:layout_height="55dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/kiihtyvyys"
        app:layout_constraintBaseline_toBaselineOf="@+id/anxietyButton"
        app:layout_constraintEnd_toStartOf="@+id/anxietyButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/irritationButton" />

    <Button
        android:id="@+id/anxietyButton"
        android:layout_width="57dp"
        android:layout_height="55dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="88dp"
        android:text="@string/ahdistus"
        app:layout_constraintBottom_toTopOf="@+id/btnInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/agitationButton"
        app:layout_constraintTop_toBottomOf="@+id/barChart"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/irritationButton"
        android:layout_width="57dp"
        android:layout_height="55dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/arsytys"
        app:layout_constraintBaseline_toBaselineOf="@+id/agitationButton"
        app:layout_constraintEnd_toStartOf="@+id/agitationButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sleepButton" />

</androidx.constraintlayout.widget.ConstraintLayout>